src/snapshots/ivly__tests__main_integration_test-10.snap
---
source: src/tests.rs
assertion_line: 57
expression: tags
---
{
  "tag-2": Style(
    fg: "green",
    bg: Some("red"),
  ),
}
