src/snapshots/ivly__tests__main_integration_test-2.snap
---
source: src/tests.rs
assertion_line: 26
expression: tasks
---
[
  Task(
    id: "[id]",
    description: "This is a new task",
    created: "[created]",
    state: Todo(
      marked: None,
    ),
  ),
  Task(
    id: "[id]",
    description: "This is a new task 2",
    note: "with a note",
    created: "[created]",
    tags: [
      "tag1",
      "tag-2",
    ],
    state: Todo(
      marked: None,
    ),
  ),
]
