src/snapshots/ivly__tests__main_integration_test-6.snap
---
source: src/tests.rs
assertion_line: 40
expression: done
---
[
  Task(
    id: "[id]",
    description: "This is a new task",
    created: "[created]",
    state: Done(
      completed: "[completed]",
    ),
  ),
]
