src/snapshots/ivly__tests__main_integration_test-8.snap
---
source: src/tests.rs
assertion_line: 49
expression: open
---
[
  Task(
    id: "[id]",
    description: "This is a new task 2",
    note: "with a note",
    created: "[created]",
    tags: [
      "tag1",
      "tag-2",
    ],
    state: Todo(
      marked: None,
    ),
  ),
  Task(
    id: "[id]",
    description: "This is a new task 3",
    created: "[created]",
    state: Todo(
      marked: None,
    ),
  ),
]
