src/snapshots/ivly__tests__main_integration_test.snap
---
source: src/tests.rs
assertion_line: 19
expression: tasks
---
[
  Task(
    id: "[id]",
    description: "This is a new task",
    created: "[created]",
    state: Todo(
      marked: None,
    ),
  ),
]
