src/snapshots/ivly__tests__print_tags.snap
---
source: src/tests.rs
assertion_line: 92
expression: o
---
Tag  FG    BG   
[34mtag1[0m [34mblue[0m  [47m[0m     
[44;31mtag2[0m [31mred[0m   [44mblue[0m 
[42;32mtag3[0m [32mgreen[0m [42mgreen[0m
